# mpfp

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_wheels.yml
src/: module.cpp  module.hh
test/: test_mpfp.py
